--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -49,7 +49,7 @@ stages:
   dependsOn: Build
   condition: succeeded()
   jobs:
-  - deployment: DeployLinux VM
+  - deployment: Demo-Linux
     displayName: Deploy Linux VM
     environment: $(environmentName)
     pool:
