--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -4,7 +4,7 @@
 # https://aka.ms/yaml
 
 trigger:
-- master
+- none
 
 variables:
 
@@ -53,7 +53,7 @@ stages:
   - deployment: deploymentJob
     displayName: WebApp
     environment: 
-      name: Dev.Demo-Linux
+      name: Dev12.Demo-Linux
       resourceType: VirtualMachine
       tags: demolinux
     pool:
