--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -62,11 +62,11 @@ stages:
       runOnce:
         deploy:
           steps:
-          - script: echo first deployment
-          # - task: AzureWebApp@1
-          #   displayName: 'Azure Web App Deploy: Demo-Linux'
-          #   inputs:
-          #     azureSubscription: $(azureSubscription)
-          #     appType: webAppLinux
-          #     appName: $(webAppName)
-          #     package: '$(Pipeline.Workspace)/drop/**/target/*.war'
+          #- script: echo first deployment
+          - task: AzureWebApp@1
+            displayName: 'Azure Web App Deploy: Demo-Linux'
+            inputs:
+              azureSubscription: $(azureSubscription)
+              appType: webAppLinux
+              appName: $(webAppName)
+              package: '$(Pipeline.Workspace)/drop/**/target/*.war'
